--- a/static/css/game.css
+++ b/static/css/game.css
@@ -2,7 +2,7 @@
     background: var(--background-color);
     border-radius: 5px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 #game-action {
