Added statistics final window, and backend logic.

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,15 @@
                 <div id="game-outcome">
                     <p>Your reward: <b id="game-outcome-reward">10</b></p>
                     <button id="game-replay-button">Play again</button>
+                    <div id="game-player-progress">
+                        <p>Games played: <b id="game-outcome-game-number">0</b> / <span id="total-games-required">10</span></p>
+                    </div>
+                </div>
+                <div id="game-statistics" style="display: none">
+                    <p>Your statistics</p>
+                    <p>Average score: <b id="game-statistics-your-score">10.12</b></p>
+                    <p>All players average: <b id="game-statistics-players-score">9.12</b></p>
+                    <p>Rank: <b id="game-statistics-rank">7</b> / <span id="game-statistics-n-players">20</span></p>
                 </div>
             </div>
         </div>
