--- a/static/css/user_data.css
+++ b/static/css/user_data.css
@@ -13,6 +13,10 @@
     margin-bottom: 10px;
 }
 
+#user-data select {
+    display: block;
+}
+
 #user-data input[type="text"] {
     display: block;
 }
