--- a/static/css/game.css
+++ b/static/css/game.css
@@ -22,3 +22,36 @@
 #game button:hover {
     background: var(--button-color);
 }
+
+#game #game-state {
+    padding: 0px 12px;
+}
+
+#game #game-explanation {
+    margin: 5px 12px;
+    text-align: center;
+}
+
+#game #game-explanation #quit-tutorial-button {
+    margin: 5px auto;
+}
+
+#game #game-outcome {
+    margin: 0 12px;
+}
+
+#game #game-outcome #game-replay-button {
+    margin: 5px auto;
+}
+#game #game-outcome #game-outcome-penalization {
+    color: red;
+}
+
+#game #game-outcome #game-player-progress-filling-div {
+    width: 100%;
+    background: var(--link-color-hover);
+    height: 10px;
+    margin: 3px 0 10px 0;
+    border-radius: 5px;
+    transition: width 0.5s;
+}
