--- a/templates/index.html
+++ b/templates/index.html
@@ -89,9 +89,16 @@
             <!-- Actual game -->
             <div id="game">
                 <div id="game-state">
-                    <span>Day <b id="game-state-day">4</b></span>
-                    <span>Price <b id="game-state-price">12.52</b></span>
-                    <span>Other selled: <b id="game-state-other-selled">yes</b></span>
+                    <div>
+                        <span>Day: <b id="game-state-day-text">Monday</b>
+                            (<span id="game-state-day-days-left">7</span> days left)</span>
+                    </div>
+                    <div>
+                        <span>Opponent sold? <b id="game-state-other-selled">yes</b></span>
+                    </div>
+                    <div id="game-state-price-container">
+                        <span>Price <b id="game-state-price">12.52</b> / 20</span>
+                    </div>
                 </div>
                 <div id="game-explanation">
                     <p id="game-explanation-text">This is a sample explanation text</p>
@@ -102,17 +109,26 @@
                     <button id="game-dont-sell-button">Don't sell</button>
                 </div>
                 <div id="game-outcome">
-                    <p>Your reward: <b id="game-outcome-reward">10</b></p>
-                    <button id="game-replay-button">Play again</button>
+                    <p>Your reward: <b id="game-outcome-reward">10</b><span id="game-outcome-penalization" style="display: none"> - Penalty for colluding with your opponent</span></p>
                     <div id="game-player-progress">
                         <p>Games played: <b id="game-outcome-game-number">0</b> / <span id="total-games-required">10</span></p>
+                        <div id="game-player-progress-filling-div" style="display: none"></div>
                     </div>
+                    <button id="game-replay-button">Play again</button>
                 </div>
                 <div id="game-statistics" style="display: none">
-                    <p>Your statistics</p>
-                    <p>Average score: <b id="game-statistics-your-score">10.12</b></p>
-                    <p>All players average: <b id="game-statistics-players-score">9.12</b></p>
+                    <h4>Your statistics</h4>
+                    <p>Average score: <b id="game-statistics-your-score">10.12</b> / 20</p>
+                    <p>All players average: <b id="game-statistics-players-score">9.12</b> / 20</p>
                     <p>Rank: <b id="game-statistics-rank">7</b> / <span id="game-statistics-n-players">20</span></p>
+                    <p style="
+                        text-align: justify;
+                        color: var(--text-color-secondary);
+                        font-size: 0.9em;
+                    ">As a reward for having completing <span id="total-games-required-2">10</span> games, we
+                    have computed your statistics, how did you do? Remember, you must <b>not play again</b>
+                    as it would introduce bias  in the data. Thank you for your collaboration on the project. <br>
+                        Sincerely, Martín Alejandre Chaya.</p>
                 </div>
             </div>
         </div>
