Tutorial and rules correction

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                         <li><i>(iv)</i> The <b>prices</b> offered at the market follow are <b>random 📈</b> (uniform)
                             between <b>0</b> and <b>20</b>.</li>
                         <li><i>(v)</i> There is <b>another agent 👔</b> playing at the same time, with the same price.
-                            If you both sell the same day (<b>collude</b>) you are <b>penalized</b> and only receive
+                            If you both sell the same day (<b>collude</b>) you are both <b>penalized</b> and only receive
                             half of the price 🖓.</li>
                         <li><i>(vi)</i> You will know whether the other agent <b>already sold</b> his stock.</li>
                         <li><i>(vii)</i> You can assume the other agent will be <b>playing optimally</b> (like you 😉).</li>
@@ -111,7 +111,7 @@
                     <button id="game-dont-sell-button">Don't sell</button>
                 </div>
                 <div id="game-outcome">
-                    <p>Your reward: <b id="game-outcome-reward">10</b><span id="game-outcome-penalization" style="display: none"> - Penalty for colluding with your opponent</span></p>
+                    <p>Your reward: <b id="game-outcome-reward">10</b><span id="game-outcome-penalization" style="display: none"> - Penalty for colluding with the other agent.</span></p>
                     <div id="game-player-progress">
                         <p>Games played: <b id="game-outcome-game-number">0</b> / <span id="total-games-required">10</span></p>
                         <div id="game-player-progress-filling-div" style="display: none"></div>
