--- a/templates/index.html
+++ b/templates/index.html
@@ -132,10 +132,9 @@
 
     <div class="container footer">
         <p>
-            This website was created by <b>Martín Alejandre Chaya</b> for the
-            Final Master's Thesis <b>Studying algorithmic trading from a Game Theory
-            and Reinforcement Learning perspective</b><br>
-            Tutored by <b>Alberto Antonioni</b> in the Carlos III University of Madrid.
+            This website was created by <a href="https://www.linkedin.com/in/martin-alejandre-chaya/" target="_blank">Martín Alejandre Chaya</a> with the purpose of collecting data for the
+            Final Master Thesis in the context of Game Theory and the Stock Market.
+            Tutored by Alberto Antonioni at the UC3M.
         </p>
     </div>
 
