--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,6 +1,7 @@
 
 .footer {
     padding: 0 10px;
-    margin-top: 20px;
-    text-align: center;
+    max-width: 510px;
+    margin: 20px auto 0 auto;
+    text-align: justify;
 }
