--- a/templates/index.html
+++ b/templates/index.html
@@ -106,11 +106,11 @@
                     <h4>Your statistics</h4>
                     <p>Average score: <b id="game-statistics-your-score">10.12</b> / 20</p>
                     <p>All players average: <b id="game-statistics-players-score">9.12</b> / 20</p>
-                    <p>Ranking: top <b id="game-statistics-percentile">92</b> %</p>
+                    <p>Ranking: <span id="game-statistics-text-top">top</span> <b id="game-statistics-percentile">92</b> %</p>
                     <div id="game-statistics-last-20-games" style="display: none">
                         <h4>Last <span class="total-games-required">10</span> games</h4>
                         <p>Average score: <b id="game-statistics-last-20-your-score">10.12</b> / 20</p>
-                        <p>Ranking: top <b id="game-statistics-last-20-percentile">92</b> %</p>
+                        <p>Ranking: <span id="game-statistics-last-20-text-top">top</span> <b id="game-statistics-last-20-percentile">92</b> %</p>
                     </div>
                     <p style="
                         margin: 10px 0;
