--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
     <div class="container" id="main-container">
         <div class="container header">
             <h1>The stocks game</h1>
-            <p>A simple game where you try to maximize the profit of your stock.</p>
+            <p>A simple game where you try to maximize the profit of a stock. Play to help me gather data
+                for my Final Master Thesis. It will take you only <b>5 minutes</b>.</p>
             <hr>
         </div>
 
@@ -68,6 +69,7 @@
                 <input id="user-data-study-field" type="text" maxlength="150"
                     placeholder="Your area of studies (name of your degree) if any.">
                 <div id="user-data-buttons">
+                    <p>First a tutorial to help you understand the game.</p>
                     <button id="tutorial-button">Tutorial</button>
                 </div>
             </div>
@@ -118,8 +120,8 @@
                         color: var(--text-color-secondary);
                         font-size: 0.9em;
                     ">Thank you for playing <span id="total-games-played-so-far">10</span> games, we have computed your
-                        statistics, how did you do? You can continue playing, but you must <b>not start again</b> as it
-                        would introduce bias  in the data. Thank you for your collaboration on the project. <br>
+                        statistics, how did you do? You can continue playing, but <b>don't reuse the link</b> as it
+                        would introduce bias  in the data. Thank you for your collaboration to the project. <br>
                         Sincerely, Martín Alejandre Chaya.</p>
                     <button id="continue-playing-button">Continue playing</button>
                 </div>
