--- a/static/css/user_data.css
+++ b/static/css/user_data.css
@@ -39,13 +39,13 @@
 }
 
 #user-data #user-data-buttons {
-    display: flex;
-    justify-content: space-evenly;
+    text-align: center;
 }
 
 #user-data #user-data-buttons #tutorial-button {
     width: 45%;
     max-width: 120px;
     padding: 10px 2px;
+    margin-top: 8px;
 }
 
