--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                         <p>Games played: <b id="game-outcome-game-number">0</b> / <span class="total-games-required">10</span></p>
                         <div id="game-player-progress-filling-div"></div>
                     </div>
-                    <button id="game-replay-button">Play again</button>
+                    <button id="game-replay-button">Continue tutorial</button>
                 </div>
                 <div id="game-statistics" style="display: none">
                     <h4>Your statistics</h4>
