Adding contest prizes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,12 @@
                     <p>First a tutorial to help you understand the game.</p>
                     <button id="tutorial-button">Tutorial</button>
                 </div>
+                <div>
+                    <p>We are giving out 2 prizes of 30€ to gather more data. Enter your <b>paypal email account</b>
+                    and play 20 games (5 minutes) to enter the contest.</p>
+                   <input id="user-data-concurso-paypal" type="text" maxlength="150"
+                       placeholder="Paypal e-mail">
+                </div>
             </div>
 
             <!-- Actual game -->
