--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
                     <button id="tutorial-button">Tutorial</button>
                 </div>
                 <div>
-                    <p>We are giving out 2 prizes of 30€ to gather more data. Enter your <b>paypal email account</b>
-                    and play 20 games (5 minutes) to enter the contest.</p>
+                    <p id="user-data-concurso-text">We are giving out 2 prizes of <b>30€</b>. Enter your <b>paypal email account</b>
+                    and play 20 games (5 minutes) to enter the contest. Limit date: 6th May 2024.</p>
                    <input id="user-data-concurso-paypal" type="text" maxlength="150"
                        placeholder="Paypal e-mail">
                 </div>
